[gd_scene load_steps=5 format=3 uid="uid://dxnfhl4cdlllt"]

[ext_resource type="Script" path="res://scripts/player_rank.gd" id="1_4hjyw"]
[ext_resource type="FontFile" uid="uid://cf7ocurslf3ii" path="res://assets/font/VonwaonBitmap-12px.ttf" id="1_mswcn"]
[ext_resource type="Texture2D" uid="uid://cjen25k4v6w1r" path="res://assets/ui/rank_title.png" id="2_7t3ll"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_og54m"]
texture = ExtResource("2_7t3ll")
texture_margin_left = 31.0
texture_margin_top = 24.0
texture_margin_right = 32.0
texture_margin_bottom = 24.0

[node name="PlayerRank" type="Control"]
z_index = 98
custom_minimum_size = Vector2(1280, 720)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4hjyw")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 0.666667)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -193.5
offset_right = 193.5
offset_bottom = 156.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_mswcn")
theme_override_font_sizes/font_size = 108
theme_override_styles/normal = SubResource("StyleBoxTexture_og54m")
text = "积分榜"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_top = 657.0
offset_right = 88.0
offset_bottom = 720.0
theme_override_font_sizes/font_size = 40
text = "返回"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -258.0
offset_top = -188.0
offset_right = 258.0
offset_bottom = 238.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100
alignment = 1

[node name="Rank" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 9
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_mswcn")
theme_override_font_sizes/font_size = 36
text = "排名"
horizontal_alignment = 1

[node name="Name" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 9
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_mswcn")
theme_override_font_sizes/font_size = 36
text = "名称"
horizontal_alignment = 1

[node name="Achi" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 9
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_mswcn")
theme_override_font_sizes/font_size = 36
text = "成就"
horizontal_alignment = 1

[node name="Level" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 9
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_mswcn")
theme_override_font_sizes/font_size = 36
text = "等级
"
horizontal_alignment = 1

[node name="Level2" type="Label" parent="HBoxContainer/Level"]
layout_mode = 0
offset_right = 48.0
offset_bottom = 426.0
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("1_mswcn")
theme_override_font_sizes/font_size = 36

[node name="Times" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 9
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_mswcn")
theme_override_font_sizes/font_size = 36
text = "学习次数"
horizontal_alignment = 1

[node name="Times2" type="Label" parent="HBoxContainer/Times"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -24.0
offset_right = 24.0
offset_bottom = 426.0
grow_horizontal = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("1_mswcn")
theme_override_font_sizes/font_size = 36

[node name="Score" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("1_mswcn")
theme_override_font_sizes/font_size = 36
text = "积分"
horizontal_alignment = 1

[node name="Score2" type="Label" parent="HBoxContainer/Score"]
layout_mode = 0
offset_right = 48.0
offset_bottom = 426.0
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("1_mswcn")
theme_override_font_sizes/font_size = 36

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
